# python-template

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  docs.yml  release.yml  test.yml
docs/: index.md
project_template/: __init__.py
tests/: conftest.py  test_smoke.py
